--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -21,7 +21,9 @@
 					<li><a href="/products" class="link">Our products</a></li>
 					<li><a href="/values" class="link">About</a></li>
 					<li><a href="/post" class="link">Blog</a></li>
-					<li><a href="/contact" class="link">Contact</a></li>
+					<li><a href="https://fakazahot.com/" class="link">Fakaza 2022</a></li>
+					<li><a href="https://mposa.co.za/" class="link">Mposa Music</a></li>
+					<li><a href="https://zuluhiphop.com/" class="link">Zulu Hip Hop</a></li>
 				</ul>
 			</div>
 
