--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -30,8 +30,9 @@
 			<div>
 				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
 				<ul class="mb3">
-					<li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>
-					<li><a href="/contact" class="link">Schedule and appointment</a></li>
+					<li><a href="https://fakazaxyz.com" class="link">Latest Music</a></li>
+					<li><a href="https://webmusic.co.za" class="link">Webmusic</a></li>
+					<li><a href="https://afrobeat.co.za" class="link">Afrobeat ZA</a></li>
 				</ul>
 			</div>
 
