--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -17,7 +17,7 @@
 			<div>
 				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
 				<ul class="mb3">
-					<li><a href="/" class="link">Home</a></li>
+					<li><a href="https://bit.ly/3RGTsE8" class="link">Free Music Lyrics</a></li>
 					<li><a href="/products" class="link">Our products</a></li>
 					<li><a href="/values" class="link">About</a></li>
 					<li><a href="/post" class="link">Blog</a></li>
